--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head></head>
+  <body>
+    <h1>John's GitHub Page</h1>
+    <p>More to come...</p>
+  </body>
+</html>
